# cloud_resource_matcher

./: .gitignore  .gitlab-ci.yml  README.md  mypy.ini  pyproject.toml
benches/: __init__.py  bench_base.py  bench_complete.py  bench_mini.py  utils.py
benches/utils/: __init__.py  cli.py  data_generation.py  formatting.py  plot.py  results.py  run.py
cloud_resource_matcher/modules/base/: __init__.py  build_mip.py  extract_solution.py  solution_extraction.py
cloud_resource_matcher/modules/multi_cloud/: __init__.py  build_mip.py  solution_extraction.py  validate.py
cloud_resource_matcher/modules/network/: __init__.py  build_mip.py  pre_processing.py  validate.py
cloud_resource_matcher/modules/performance/: __init__.py  build_mip.py  pre_processing.py  validate.py
cloud_resource_matcher/modules/service_limits/: __init__.py  build_mip.py  validate.py
examples/: __init__.py  big_demo.py  demo.py  generated_demo.py  small_demo.py
examples/case_studies/: amazon_aurora.py  amazon_kinesis_data_analytics.py  amazon_s3.py  aws_lambda.py  azure_functions.py  google_cloud_storage.py
optimizer/: data.py  main.py  model.py  scheduler.py  solver.py  solving.py  types.py
optimizer/data/: __init__.py  base.py  base_data.py  multi_cloud.py  multi_cloud_data.py  network.py  network_data.py  performance.py  performance_data.py  validated.py
optimizer/default/: optimizer.py  steps.py
optimizer/extensions/: __init__.py  base.py  decorators.py  extension.py  multi_cloud.py  network.py  performance.py
optimizer/extensions/build_mip/: __init__.py  base.py  create_mip.py  create_objective.py  multi_cloud.py  network.py  performance.py
optimizer/extensions/data/: __init__.py  base_data.py  multi_cloud_data.py  network_data.py  performance_data.py
optimizer/extensions/extract_solution/: base.py  cost.py
optimizer/extensions/solve/: __init__.py  solve.py
optimizer/extensions/validate/: base.py  multi_cloud.py  network.py  performance.py
optimizer/extensions_v2/build_mip/: base.py  create_mip.py  create_objective.py  multi_cloud.py  network.py  performance.py
optimizer/extensions_v2/extract_solution/: __init__.py  (+2 more)
optimizer/framework/: __init__.py  optimizer.py  tasks.py
optimizer/mixed_integer_program/: __init__.py  built.py  built_mixed_integer_program.py  mixed_integer_program.py  solving.py  types.py
optimizer/modules/: __init__.py
optimizer/optimizer/: built_optimizer.py  default.py  extension.py  optimizer.py  validated_optimizer.py
optimizer/optimizer_toolbox_model/: __init__.py  base_data.py  multi_cloud_data.py  network_data.py  optimizer_toolbox_model.py  performance_data.py
optimizer/optimizer_v2/: demo.py  optimizer.py  step.py
optimizer/workflow_engine/: step.py  task.py  workflow.py
test/: __init__.py  framework.py  test_base.py  test_base_data.py  test_multi_cloud.py  test_network.py  test_performance.py
test/case_studies/: __init__.py  test_amazon_aurora.py  test_amazon_kinesis_data_analytics.py  test_google_cloud_storage.py
test/data/: test_base_data.py  test_multi_cloud_data.py  test_network_data.py
test/extensions/: test_base.py  test_multi_cloud.py  test_network.py  test_performance.py
test/mixed_integer_program/: test_base.py  test_multi_cloud.py  test_network.py  test_performance.py
test/modules/: __init__.py
(+61 files in other folders)
