[tool.poetry]
name = "optimizer"
version = "0.1.0"
description = "A tool to match cloud resources to cloud services."
authors = ["Tim Jentzsch <optimizer.projects@timjen.net>"]
exclude = ["examples", "benches", "test"]

[tool.poetry.scripts]
demo = "examples.demo:main"
bench_mini = "benches.bench_mini:bench"
bench_base = "benches.bench_base:bench"
bench_complete = "benches.bench_complete:bench"

[tool.poetry.dependencies]
python = "^3.11"
# Git dependency needed for a bugfix, see <https://github.com/coin-or/pulp/pull/627>
PuLP = { git = "https://github.com/TimJentzsch/pulp.git", rev = "ff1f470320ecbe43afce48253e50b14cbc125757" }
optiframe = "^0.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ruff = "^0.0.246"
pytest = "^7.2.0"
mypy = "^1.1.1"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
